--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio - Gosia</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <section>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </section>
-    
+    <header></header>
+    <nav></nav>
+    <main>
+        <section>
+            <div></div>
+            <aside></aside>
+        </section>
+        <section>
+            <div></div>
+        </section>
+        <section>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+        <section>
+            <div></div>
+        </section>
+        <section>
+            <div></div>
+        </section>
+    </main>
+   <footer></footer>
+    <script src="script.js"></script>
 </body>
 </html>
