nav structure, style reset in css

--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Gosia</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
+    
 </head>
 <body>
     <header></header>
-    <nav></nav>
+    <div>
+        <button><i class="fas fa-bars"></i>Menu</button>
+    </div>
+    <nav>
+        <ul>
+            <li><a href=#>O Mnie</a></li>
+            <li><a href=#>Galeria</a></li>
+            <li><a href=#>Pakiety</a></li>
+            <li><a href=#>Kontakt</a></li>
+          </ul> 
+    </nav>
     <main>
         <section>
             <div></div>
