--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Gosia</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
@@ -11,17 +14,18 @@
 </head>
 <body>
     <header></header>
-    <div>
-        <button><i class="fas fa-bars"></i>Menu</button>
-    </div>
     <nav>
         <ul>
             <li><a href=#>O Mnie</a></li>
             <li><a href=#>Galeria</a></li>
+            <li><a href=#>Motto</a></li>
             <li><a href=#>Pakiety</a></li>
             <li><a href=#>Kontakt</a></li>
           </ul> 
     </nav>
+    <div class="menu">
+        <i class="fas fa-bars"></i>
+    </div>
     <main>
         <section>
             <div></div>
