add banner section html structure

--- a/index.html
+++ b/index.html
@@ -13,19 +13,31 @@
     
 </head>
 <body>
-    <header></header>
-    <nav>
-        <ul>
-            <li><a href=#>O Mnie</a></li>
-            <li><a href=#>Galeria</a></li>
-            <li><a href=#>Motto</a></li>
-            <li><a href=#>Pakiety</a></li>
-            <li><a href=#>Kontakt</a></li>
-          </ul> 
-    </nav>
-    <div class="menu">
-        <i class="fas fa-bars"></i>
-    </div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href=#>O Mnie</a></li>
+                <li><a href=#>Galeria</a></li>
+                <li><a href=#>Motto</a></li>
+                <li><a href=#>Pakiety</a></li>
+                <li><a href=#>Kontakt</a></li>
+            </ul> 
+        </nav>
+        <div class="menu">
+            <i class="fas fa-bars"></i>
+        </div>
+        <section class="banner">
+            <div class="team">
+                <img src="img/banner_girl_color.png" alt="girl in color">
+                <img src="img/banner_biggirl_bw.png" alt="girl in black and white">
+                <div class="member">
+                    <h1>Front-end developer</h1>
+                    <h2>Małgorzata Szymanik</h2>
+                </div>
+            </div>
+
+        </section>
+    </header>
     <main>
         <section>
             <div></div>
