--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" 
+    integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9"
         crossorigin="anonymous">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
     
 </head>
@@ -27,12 +32,12 @@
             <i class="fas fa-bars"></i>
         </div>
         <section class="banner">
-            <div class="team">
-                <img src="img/banner_girl_color.png" alt="girl in color">
-                <img src="img/banner_biggirl_bw.png" alt="girl in black and white">
-                <div class="member">
+            <div class="member">
+                <img class="color" src="img/banner_girl_color.png" alt="girl in color">
+                <img class="gray" src="img/banner_girl_bw.png" alt="girl in black and white">
+                <div class="info">
                     <h1>Front-end developer</h1>
-                    <h2>Małgorzata Szymanik</h2>
+                    <h2>Małgorzata S.</h2>
                 </div>
             </div>
 
