banner javasctipt swap

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img class="gray" src="img/banner_girl_bw.png" alt="girl in black and white">
                 <div class="info">
                     <h1>Front-end developer</h1>
-                    <h2>Małgorzata S.</h2>
+                    <h2>Margaret S.</h2>
                 </div>
             </div>
 
