create flex structure for main and sections

--- a/index.html
+++ b/index.html
@@ -44,23 +44,25 @@
         </section>
     </header>
     <main>
-        <section>
-            <div></div>
-            <aside></aside>
+        <section class="me">
+            <div>
+            </div>
+            <aside>
+            </aside>
         </section>
-        <section>
-            <div></div>
-        </section>
-        <section>
-            <div></div>
-            <div></div>
-            <div></div>
+        <section class="gallery">
             <div></div>
         </section>
-        <section>
+        <section class="motto">
+            <div></div>
+            <div></div>
+            <div></div>
             <div></div>
         </section>
-        <section>
+        <section class="prices">
+            <div></div>
+        </section>
+        <section class="contact">
             <div></div>
         </section>
     </main>
