create section me

--- a/index.html
+++ b/index.html
@@ -46,8 +46,14 @@
     <main>
         <section class="me">
             <div>
+                <img class="portrait" src="img/me_girl.png" alt="girl at the desk">
             </div>
             <aside>
+                <h3>Kim jestem?</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime recusandae quam hic deleniti sint, explicabo at eum non id facilis nihil, reprehenderit culpa corporis autem ipsam tempora magni nobis quisquam.
+                Fugiat accusantium ullam soluta velit fuga a ad nesciunt aliquid. Sint temporibus quam repudiandae nam omnis voluptas sequi officiis, quisquam suscipit fugiat modi totam ullam accusantium, pariatur saepe quos asperiores.
+                Voluptatum quidem cupiditate distinctio iusto aliquam quia, cum libero quis exercitationem corrupti, tempora voluptas in. Laborum beatae laudantium rerum. Unde, in autem. Aliquam nemo saepe rem rerum, ab cumque voluptate?
+                </p>
             </aside>
         </section>
         <section class="gallery">
