create section gallery

--- a/index.html
+++ b/index.html
@@ -56,11 +56,32 @@
                 </p>
             </aside>
         </section>
+
         <section class="gallery">
-            <div></div>
+            <div>
+                <h3>Galeria moich projektów</h3>
+            </div>
+            <div class="images">
+                <a href="img/websites/web1.jpeg"><img src="img/websites/min1.jpg" alt="miniature"></a>
+            </div>
+            <div class="images">
+                <a href="img/websites/web2.jpeg"><img src="img/websites/min2.jpg" alt="miniature"></a>
+            </div>
+            <div class="images">
+                <a href="img/websites/web3.jpeg"><img src="img/websites/min3.jpg" alt="miniature"></a>
+            </div>
+            <div class="images">
+                <a href="img/websites/web4.jpeg"><img src="img/websites/min4.jpg" alt="miniature"></a>
+            </div>
+            <div class="images">
+                <a href="img/websites/web5.jpeg"><img src="img/websites/min5.jpg" alt="miniature"></a>
+            </div>
+            <div class="images">
+                <a href="img/websites/web6.jpeg"><img src="img/websites/min6.jpg" alt="miniature"></a>
+            </div>  
         </section>
         <section class="motto">
-            <div></div>
+            <h3>Moje motto życiowe</h3>
             <div></div>
             <div></div>
             <div></div>
