adds lightbox to gallery

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Gosia</title>
+    <link href="dist/css/lightbox.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -62,22 +63,22 @@
                 <h3>Galeria moich projektów</h3>
             </div>
             <div class="images">
-                <a href="img/websites/web1.jpeg"><img src="img/websites/min1.jpg" alt="miniature"></a>
+                <a data-lightbox="gallery" data-title="Projekt strony 1" href="img/websites/web1.jpeg"><img src="img/websites/min1.jpg" alt="miniature"></a>
             </div>
             <div class="images">
-                <a href="img/websites/web2.jpeg"><img src="img/websites/min2.jpg" alt="miniature"></a>
+                <a data-lightbox="gallery" data-title="Projekt strony 2" href="img/websites/web2.jpeg"><img src="img/websites/min2.jpg" alt="miniature"></a>
             </div>
             <div class="images">
-                <a href="img/websites/web3.jpeg"><img src="img/websites/min3.jpg" alt="miniature"></a>
+                <a data-lightbox="gallery" data-title="Projekt strony 3" href="img/websites/web3.jpeg"><img src="img/websites/min3.jpg" alt="miniature"></a>
             </div>
             <div class="images">
-                <a href="img/websites/web4.jpeg"><img src="img/websites/min4.jpg" alt="miniature"></a>
+                <a data-lightbox="gallery" data-title="Projekt strony 4" href="img/websites/web4.jpeg"><img src="img/websites/min4.jpg" alt="miniature"></a>
             </div>
             <div class="images">
-                <a href="img/websites/web5.jpeg"><img src="img/websites/min5.jpg" alt="miniature"></a>
+                <a data-lightbox="gallery" data-title="Projekt strony 5" href="img/websites/web5.jpeg"><img src="img/websites/min5.jpg" alt="miniature"></a>
             </div>
             <div class="images">
-                <a href="img/websites/web6.jpeg"><img src="img/websites/min6.jpg" alt="miniature"></a>
+                <a data-lightbox="gallery" data-title="Projekt strony 6" href="img/websites/web6.jpeg"><img src="img/websites/min6.jpg" alt="miniature"></a>
             </div>  
         </section>
         <section class="motto">
@@ -94,6 +95,7 @@
         </section>
     </main>
    <footer></footer>
+   <script src="dist/js/lightbox-plus-jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
