create section motto

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         </section>
         <section class="motto">
             <h3>Moje motto życiowe</h3>
-            <div></div>
-            <div></div>
-            <div></div>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet odit doloribus saepe temporibus libero delectus autem perferendis! Veniam, sit rerum distinctio suscipit nesciunt minima placeat. 
+            </p>
+            <p class="author">Adam Kowalski</p>
         </section>
         <section class="prices">
             <div></div>
