create section packages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
         <section class="me">
             <div>
-                <img class="portrait" src="img/me_girl.png" alt="girl at the desk">
+                <img class="portrait" src="img/me_girl.jpg" alt="girl at the desk">
             </div>
             <aside>
                 <h3>Kim jestem?</h3>
@@ -87,8 +87,58 @@
             </p>
             <p class="author">Adam Kowalski</p>
         </section>
-        <section class="prices">
-            <div></div>
+        <section class="packages">
+            <h3>Pakiety jakie oferuję <i class="fas fa-cube"></i></h3>
+            <div class="column">
+                <h4>Pakiet Podstawowy:</h4>
+                <h4>Strona Wizytówka</h4>
+                <img src="img/package1.png" alt="">
+                <p>Idealny dla małych firm i osób potrzebujących prostej strony informacyjnej</p>
+                <p>Zawartość pakietu:</p>
+                    <ul>
+                        <li>1-3 podstrony</li>
+                        <li>Responsywny design</li>
+                        <li>Podstawowa optymalizacja SEO</li>
+                        <li>Formularz kontaktowy</li>
+                        <li>Integracja z mediami społecznościowymi</li>
+                    </ul>
+                <p class="price"><span>1 500 - 2 500 PLN</span></p>
+               </div>
+               <div class="column">
+                <h4>Pakiet Standardowy:</h4>
+                <h4>Strona Firmowa</h4>
+                <img src="img/package2.png" alt="">
+                <p>Dla firm potrzebujących rozbudowanej strony z możliwością zarządzania treścią</p>
+                <p>Zawartość pakietu:</p>
+                <ul>
+                    <li>Do 5-7 podstron</li>
+                    <li>System zarządzania treścią (CMS), np. WordPress</li>
+                    <li>Responsywny design</li>
+                    <li>Rozszerzona optymalizacja SEO</li>
+                    <li>Formularz kontaktowy i mapa Google</li>
+                    <li>Podstawowa analiza danych (np. Google Analytics)</li>
+                    <li>Integracja z mediami społecznościowymi</li>
+                </ul>
+                <p class="price"><span>3 000 - 5 000 PLN</span></p>
+               </div>
+               <div class="column">
+                <h4>Pakiet Premium:</h4>
+                <h4>Strona E-commerce</h4>
+                <img src="img/package3.png" alt="">
+                <p>Dla firm, które chcą sprzedawać produkty lub usługi online</p>
+                <p>Zawartość pakietu:</p>
+                <ul>
+                    <li>Do 10 podstron</li>
+                    <li>Sklep internetowy z koszykiem, płatnościami online, opcją logowania dla klientów</li>
+                    <li>System zarządzania treścią (CMS)</li>
+                    <li>Zaawansowana optymalizacja SEO</li>
+                    <li>Zabezpieczenia SSL</li>
+                    <li>Integracja z systemami płatności</li>
+                    <li>Analiza ruchu i sprzedaży</li>
+                    <li>Wsparcie techniczne przez pierwszy miesiąc</li>
+                </ul>
+                <p class="price"><span>6 000 - 12 000 PLN</span></p>
+               </div>
         </section>
         <section class="contact">
             <div></div>
