create section contact

--- a/index.html
+++ b/index.html
@@ -141,7 +141,19 @@
                </div>
         </section>
         <section class="contact">
-            <div></div>
+            <h3>Skontaktuj się ze mną</h3>
+            <form action="">
+                <input type="text" placeholder="Twoje imię i nazwisko">
+                <input type="text" placeholder="Email">
+                <textarea name="" id="" placeholder="Wiadomość"></textarea>
+                <button>Wyślij wiadomość</button>
+            </form>
+            <div class="socials">
+                <div class="social"><img src="" alt=""><span>gosia@portfolio.pl</span></div>
+                <div class="social"><img src="" alt=""><span>321456789</span></div>
+                <div class="social"><img src="" alt=""><span>Margaret Web Dev</span></div>
+                <div class="social"><img src="" alt=""><span>@gosiaportfolio</span></div>
+            </div>
         </section>
     </main>
    <footer></footer>
