create basic footer

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
         <section class="me">
             <div>
-                <img class="portrait" src="img/me_girl.jpg" alt="girl at the desk">
+                <img class="portrait" src="img/me_girl.png" alt="girl at the desk">
             </div>
             <aside>
                 <h3>Kim jestem?</h3>
@@ -149,14 +149,18 @@
                 <button>Wyślij wiadomość</button>
             </form>
             <div class="socials">
-                <div class="social"><img src="" alt=""><span>gosia@portfolio.pl</span></div>
-                <div class="social"><img src="" alt=""><span>321456789</span></div>
-                <div class="social"><img src="" alt=""><span>Margaret Web Dev</span></div>
-                <div class="social"><img src="" alt=""><span>@gosiaportfolio</span></div>
+                <div class="social"><i class="fas fa-envelope"></i><span>kontakt@gosia_portfolio.pl</span></div>
+                <div class="social"><i class="fas fa-phone"></i><span>921-456-789</span></div>
+                <div class="social"><i class="fab fa-facebook"></i><span>Margaret Web Dev</span></div>
+                <div class="social"><i class="fab fa-linkedin"></i><span>Margaret S.</span></div>
             </div>
         </section>
     </main>
-   <footer></footer>
+   <footer>
+    <div>
+        <p>@Margaret S 2024 Wszelkie prawa zastrzeżone</p>
+    </div>
+   </footer>
    <script src="dist/js/lightbox-plus-jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
