--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </main>
    <footer>
     <div>
-        <p>@Margaret S 2024 Wszelkie prawa zastrzeżone</p>
+        <p>&copy; Gonai 2024</p>
     </div>
    </footer>
    <script src="dist/js/lightbox-plus-jquery.min.js"></script>
