changes to section me

--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
             </div>
             <aside>
                 <h3>Kim jestem?</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime recusandae quam hic deleniti sint, explicabo at eum non id facilis nihil, reprehenderit culpa corporis autem ipsam tempora magni nobis quisquam.
-                Fugiat accusantium ullam soluta velit fuga a ad nesciunt aliquid. Sint temporibus quam repudiandae nam omnis voluptas sequi officiis, quisquam suscipit fugiat modi totam ullam accusantium, pariatur saepe quos asperiores.
-                Voluptatum quidem cupiditate distinctio iusto aliquam quia, cum libero quis exercitationem corrupti, tempora voluptas in. Laborum beatae laudantium rerum. Unde, in autem. Aliquam nemo saepe rem rerum, ab cumque voluptate?
+                <p>Cześć! Mam na imię Margaret i jestem front-end developerem, którego pasją jest tworzenie nowoczesnych, responsywnych stron internetowych i aplikacji. Specjalizuję się w budowaniu intuicyjnych interfejsów użytkownika, które są nie tylko estetyczne, ale i funkcjonalne.
+
+                Moje projekty koncentrują się na łączeniu technologii z użytecznością, zapewniając płynne doświadczenia użytkowników. Posiadam solidną znajomość HTML, CSS, JavaScript. Na bieżąco śledzę najnowsze trendy w branży, dzięki czemu jestem gotowa do realizacji zarówno klasycznych, jak i innowacyjnych rozwiązań.
+                    
+                W pracy stawiam na współpracę, elastyczność i dokładność. Moim celem jest pomoc firmom i osobom prywatnym w osiąganiu sukcesu w cyfrowym świecie dzięki przemyślanym projektom front-endowym.
                 </p>
             </aside>
         </section>
@@ -126,8 +128,8 @@
             <div class="socials">
                 <div class="social"><i class="fas fa-envelope"></i><span>kontakt@gosia_portfolio.pl</span></div>
                 <div class="social"><i class="fas fa-phone"></i><span>921-456-789</span></div>
-                <div class="social"><i class="fab fa-facebook"></i><span>Margaret Web Dev</span></div>
-                <div class="social"><i class="fab fa-linkedin"></i><span>Margaret S.</span></div>
+                <div class="social"><a href=https://pl-pl.facebook.com/”><i class="fab fa-facebook"></i><span>Margaret Web Dev</span></a></div>
+                <div class="social"><a href="https://www.linkedin.com/?trk=guest_homepage-basic_nav-header-logo"><i class="fab fa-linkedin"></i><span>Margaret S.</span></a></div>
             </div>
         </section>
     </main>
