add animation to section me

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
             <div>
                 <img class="portrait" src="img/me_girl.png" alt="girl at the desk">
             </div>
-            <aside>
-                <h3>Kim jestem?</h3>
-                <p>Cześć! Mam na imię Margaret i jestem front-end developerem, którego pasją jest tworzenie nowoczesnych, responsywnych stron internetowych i aplikacji. Specjalizuję się w budowaniu intuicyjnych interfejsów użytkownika, które są nie tylko estetyczne, ale i funkcjonalne.
+            <aside class="move1">
+                    <h3>Kim jestem?</h3>
+                    <p>Cześć! Mam na imię Margaret i jestem front-end developerem, którego pasją jest tworzenie nowoczesnych, responsywnych stron internetowych i aplikacji. Specjalizuję się w budowaniu intuicyjnych interfejsów użytkownika, które są nie tylko estetyczne, ale i funkcjonalne.
 
-                Moje projekty koncentrują się na łączeniu technologii z użytecznością, zapewniając płynne doświadczenia użytkowników. Posiadam solidną znajomość HTML, CSS, JavaScript. Na bieżąco śledzę najnowsze trendy w branży, dzięki czemu jestem gotowa do realizacji zarówno klasycznych, jak i innowacyjnych rozwiązań.
-                    
-                W pracy stawiam na współpracę, elastyczność i dokładność. Moim celem jest pomoc firmom i osobom prywatnym w osiąganiu sukcesu w cyfrowym świecie dzięki przemyślanym projektom front-endowym.
-                </p>
+                    Moje projekty koncentrują się na łączeniu technologii z użytecznością, zapewniając płynne doświadczenia użytkowników. Posiadam solidną znajomość HTML, CSS, JavaScript. Na bieżąco śledzę najnowsze trendy w branży, dzięki czemu jestem gotowa do realizacji zarówno klasycznych, jak i innowacyjnych rozwiązań.
+                        
+                    W pracy stawiam na współpracę, elastyczność i dokładność. Moim celem jest pomoc firmom i osobom prywatnym w osiąganiu sukcesu w cyfrowym świecie dzięki przemyślanym projektom front-endowym.
+                    </p>
             </aside>
         </section>
 
