adds meta tag to remove telephone formating in Safari

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
     <meta name="description" content="Portfolio frontend developera - Gosi, specjalizującej się w tworzeniu nowoczesnych, responsywnych i interaktywnych stron internetowych.">
     <title>Portfolio - Gosia</title>
     <link href="dist/css/lightbox.min.css" rel="stylesheet" />
